--- a/#src/scss/vars.scss
+++ b/#src/scss/vars.scss
@@ -1,6 +1,19 @@
 //colors
-$brand-low: #bcc8cf;
-$brand: #1e468a;
-$black: #1a1b1f;
+$black: #000000;
 $white: #ffffff;
-$accent: #2473fb;
+$grey: #636b78;
+$grey-light: #d0d0d0;
+//decorate-colors
+$bg-black: #050402;
+$orange: #bb8c5f;
+$orange-dark: #524336;
+
+//fonts
+$forum: 'Forum', cursive;
+$jost: 'Jost', sans-serif; //variable-font
+$montserrat-regular: 'Montserrat', sans-serif;
+$montserrat-medium: 'Montserrat', sans-serif;
+
+//wrapper-paddings
+$pl: 20px;
+$pr: 20px;
