--- a/#src/scss/mixins.scss
+++ b/#src/scss/mixins.scss
@@ -1,52 +1,75 @@
 //Подключение шрифта
 @mixin font($font_name, $file_name, $weight, $style) {
-	@font-face {
-		font-family: $font_name;
-		font-display: swap;
-		src: url("../fonts/#{$file_name}.woff") format("woff"), url("../fonts/#{$file_name}.woff2") format("woff2");
-		font-weight: #{$weight};
-		font-style: #{$style};
-	}
+  @font-face {
+    font-family: $font_name;
+    font-display: swap;
+    src: url('../fonts/#{$file_name}.woff') format('woff'),
+      url('../fonts/#{$file_name}.woff2') format('woff2');
+    font-weight: #{$weight};
+    font-style: #{$style};
+  }
+}
+//img
+@mixin image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
-//Адаптивный шрифт
-@mixin adaptiv-font($pcSize, $mobSize, $maxSize) {
-	$addSize: $pcSize - $mobSize;
-	@if $maxSize==1 {
-		//Только если меньше контейнера
-		font-size: $pcSize + px;
-		@media (max-width: #{$maxWidthContainer + px}) {
-			font-size: calc(#{$mobSize + px} + #{$addSize} * ((100vw - 320px) / #{$maxWidthContainer - 320}));
-		}
-	} @else if $maxSize==2 {
-		//Только если больше контейнера
-		font-size: $pcSize + px;
-		@media (min-width: #{$maxWidthContainer + px}) {
-			font-size: calc(#{$mobSize + px} + #{$addSize} * ((100vw - 320px) / #{$maxWidth - 320}));
-		}
-	} @else {
-		//Всегда
-		font-size: calc(#{$mobSize + px} + #{$addSize} * ((100vw - 320px) / #{$maxWidth - 320}));
-	}
+//container
+//limit on breakpoints
+@mixin max-width-limiter {
+  margin-left: auto;
+  margin-right: auto;
+  width: 100%;
+  max-width: 320px;
+  @media (min-width: $md7) {
+    max-width: $md7;
+  }
+  @media (min-width: $md6) {
+    max-width: $md6;
+  }
+  @media (min-width: $md5) {
+    max-width: $md5;
+  }
+  @media (min-width: $md4) {
+    max-width: $md4;
+  }
+  @media (min-width: $md3) {
+    max-width: $md3;
+  }
+  @media (min-width: $md2) {
+    max-width: $md2;
+  }
+  @media (min-width: $md1) {
+    max-width: $maxWidthContainer;
+  }
 }
-
-//Адаптивное свойство
-@mixin adaptiv-value($property, $startSize, $minSize, $type) {
-	$addSize: $startSize - $minSize;
-	@if $type==1 {
-		//Только если меньше контейнера
-		#{$property}: $startSize + px;
-		@media (max-width: #{$maxWidthContainer + px}) {
-			#{$property}: calc(#{$minSize + px} + #{$addSize} * ((100vw - 320px) / #{$maxWidthContainer - 320}));
-		}
-	} @else if $type==2 {
-		//Только если больше контейнера
-		#{$property}: $startSize + px;
-		@media (min-width: #{$maxWidthContainer + px}) {
-			#{$property}: calc(#{$minSize + px} + #{$addSize} * ((100vw - 320px) / #{$maxWidth - 320}));
-		}
-	} @else {
-		//Всегда
-		#{$property}: calc(#{$minSize + px} + #{$addSize} * ((100vw - 320px) / #{$maxWidth - 320}));
-	}
+@mixin container($max-width, $width: 100%) {
+  max-width: $max-width;
+  margin-left: auto;
+  margin-right: auto;
+  width: $width;
+}
+@mixin container-paddings($left, $right) {
+  padding-left: $left;
+  padding-right: $right;
+}
+@mixin padding-container($max-width, $left, $right, $width: 100%) {
+  max-width: $max-width;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: $left;
+  padding-right: $right;
+  width: $width;
+}
+//icon-pseudo
+@mixin icon-before($size, $display) {
+  content: '';
+  display: $display;
+  width: $size;
+  height: $size;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
