--- a/#src/scss/mixins.scss
+++ b/#src/scss/mixins.scss
@@ -1,10 +1,10 @@
 //Подключение шрифта
-@mixin font($font_name, $file_name, $weight, $style) {
+@mixin font($font-name, $file-name, $weight, $style: 'normal', $font-display: 'swap') {
   @font-face {
-    font-family: $font_name;
-    font-display: swap;
-    src: url('../fonts/#{$file_name}.woff') format('woff'),
-      url('../fonts/#{$file_name}.woff2') format('woff2');
+    font-family: $font-name;
+    font-display: #{$font-display};
+    src: url('../fonts/#{$file-name}.woff2') format('woff2'),
+      url('../fonts/#{$file-name}.woff') format('woff');
     font-weight: #{$weight};
     font-style: #{$style};
   }
