--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -1,3 +1,4 @@
+@import 'vars';
 //<МИКСИНЫ>===============================================================================================
 @import 'mixins';
 //</МИКСИНЫ>===============================================================================================
@@ -59,35 +60,34 @@ body {
 //</ОБОЛОЧКА>===========================================================================================================
 
 //<ОСНОВНАЯ СЕТКА>===========================================================================================================
-._container {
+.container {
   max-width: $maxWidthContainer;
-  margin: 0 auto;
-  padding-left: 16px;
-  padding-right: 16px;
-  @media (min-width: $md5) {
-    padding-left: 32px;
-    padding-right: 32px;
-  }
-  &--sm {
-    max-width: 1014px;
-  }
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: $pl;
+  padding-right: $pr;
 }
 //</ОСНОВНАЯ СЕТКА>===========================================================================================================
 
 //<ПОДКЛЮЧЕНИЕ ФАЙЛОВ UI СТИЛЕЙ, ФОРМ И ГОТОВЫХ КЛАССОВ>====================================================================================================
 // @import 'animations';
-@import 'vars';
+@import 'buttons';
 @import 'forms';
-@import 'cart';
+@import 'blocks/logo';
+@import 'blocks/cart';
+@import 'blocks/search';
+@import 'blocks/contacts';
+@import 'blocks/socials';
 // @import "ui";
 //</ПОДКЛЮЧЕНИЕ ФАЙЛОВ UI СТИЛЕЙ, ФОРМ И ГОТОВЫХ КЛАССОВ>====================================================================================================
 
 //<ПОДКЛЮЧЕНИЕ ФАЙЛОВ СТИЛЕЙ СТРАНИЦ И ЭЛЕМЕНТОВ>====================================================================================================
 @import 'header';
 @import 'footer';
+@import 'index';
 //</ПОДКЛЮЧЕНИЕ ФАЙЛОВ СТИЛЕЙ СТРАНИЦ И ЭЛЕМЕНТОВ>====================================================================================================
 
 //<ОСНОВНОЙ БЛОК>====================================================================================================
-.page {
+main {
   flex: 1 1 auto;
 }
