--- a/#src/scss/vars.scss
+++ b/#src/scss/vars.scss
@@ -10,9 +10,8 @@ $orange-dark: #524336;
 
 //fonts
 $forum: 'Forum', cursive;
-$jost: 'Jost', sans-serif; //variable-font
-$montserrat-regular: 'Montserrat', sans-serif;
-$montserrat-medium: 'Montserrat', sans-serif;
+$jost: 'Jost', sans-serif;
+$montserrat: 'Montserrat', sans-serif;
 
 //wrapper-paddings
 $pl: 20px;
