--- a/#src/scss/header.scss
+++ b/#src/scss/header.scss
@@ -1,8 +1,5 @@
 .header {
-  display: flex;
-  flex-direction: column;
   height: 80px;
-  // height: 100%;
   background-color: $bg-black;
   color: $white;
   @media (min-width: $md2) {
@@ -10,6 +7,9 @@
   }
   // .header__inner
   &__inner {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     @include padding-container($maxWidthContainer, $pl, $pr);
     position: relative;
     height: 100%;
@@ -84,30 +84,21 @@
           margin-top: 5px;
         }
       }
+      & .contacts__text {
+        font-size: 15px;
+      }
+    }
+    @media (min-width: $md1) {
     }
   }
 
-  //todo .header__catalog
   &__catalog {
-    position: relative;
-    // display: none;
+    z-index: 98;
     position: absolute;
     left: 0;
     top: 100%;
     display: flex;
     max-width: 95%;
-    // &::before {
-    //   content: '';
-    //   position: absolute;
-    //   left: 50px;
-    //   top: 1px;
-    //   width: 0;
-    //   height: 0;
-    //   border-left: 18px solid transparent;
-    //   border-right: 18px solid transparent;
-    //   border-bottom: 16px solid $white;
-    //   transform: translateY(-100%);
-    // }
   }
 
   // .header__search
@@ -152,14 +143,8 @@
     grid-area: dropdown-trigger;
     flex-grow: 0;
     display: inline-flex;
-    // justify-content: center;
     align-items: center;
     color: $white;
-    // &:focus-within + .catalog {
-    //   transform: rotate(0deg);
-    //   // visibility: visible;
-    //   opacity: 1;
-    // }
     &.open .burger-icon {
       span {
         background-color: transparent;
@@ -180,6 +165,7 @@
   // .header__dropdown-menu
   &__dropdown-menu {
     display: none;
+    z-index: 98;
     position: fixed;
     left: 0;
     top: 80px;
@@ -195,6 +181,7 @@
       border-bottom: 1px solid $orange-dark;
     }
     & .contacts__item {
+      font-size: 20px;
       margin-bottom: 20px;
       &:last-child {
         margin-bottom: 0;
@@ -218,31 +205,6 @@
           display: inline-block;
         }
       }
-    }
-  }
-}
-
-//*logo
-.logo {
-  // .logo__link
-  &__link {
-  }
-  // .logo__img
-  &__img {
-    width: 126px;
-    height: 43px;
-    // @media (min-width: $md4) {
-    //   width: 146px;
-    //   height: 53px;
-    // }
-    @media (min-width: $md2) {
-      width: 186px;
-      height: 63px;
-    }
-    img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
     }
   }
 }
@@ -333,148 +295,6 @@
   }
 }
 
-//*.contacts
-.contacts {
-  // .contacts__item
-  &__item {
-    display: flex;
-    align-items: center;
-    &--socials {
-      font-size: 12px;
-    }
-  }
-  // .contacts__link
-  &__link {
-    display: flex;
-    align-items: center;
-    height: 100%;
-    color: $white;
-    &:hover {
-      color: $orange;
-    }
-  }
-  // .contacts__icon
-  &__icon {
-    display: block;
-    width: 28px;
-    height: 28px;
-    margin-right: 10px;
-    background-repeat: no-repeat;
-    background-size: contain;
-    &--phone {
-      background-image: url(../img/icons/phone.svg);
-    }
-    &--mail {
-      background-image: url(../img/icons/mail.svg);
-    }
-  }
-  // .contacts__icon--phone
-  &__icon--phone {
-  }
-  // .contacts__text
-  &__text {
-    font-size: 20px;
-    white-space: nowrap;
-    &--work-schedule {
-      font-size: 17px;
-      color: $grey;
-      white-space: normal;
-    }
-  }
-  // .contacts__icon--mail
-  &__icon--mail {
-  }
-}
-
-//*.socials
-.socials {
-  // .socials__item
-  &__item {
-    margin-right: 10px;
-    &:last-child {
-      margin-right: 0;
-    }
-  }
-  // .socials__link
-  &__link {
-    display: flex;
-    align-items: center;
-    color: $white;
-    &:hover {
-      color: $orange;
-    }
-  }
-  // .socials__icon
-  &__icon {
-    display: inline-block;
-    width: 40px;
-    height: 40px;
-    background-repeat: no-repeat;
-    background-size: contain;
-    &--viber {
-      background-image: url(../img/icons/viber.svg);
-    }
-    &--whatsapp {
-      background-image: url(../img/icons/whatsapp.svg);
-    }
-    &--telegram {
-      background-image: url(../img/icons/telegram.svg);
-    }
-  }
-  // .socials__item--viber
-  &__item--viber {
-  }
-  // .socials__item--whatsapp
-  &__item--whatsapp {
-  }
-  // .socials__item--telegramm
-  &__item--telegramm {
-  }
-}
-
-//*search-form
-.search {
-  // .search__input
-  &__control {
-    position: relative;
-  }
-  // .search__input
-  &__input {
-    width: 100%;
-    font-size: 15px;
-    line-height: 1.5;
-    padding: 10px 10px 10px 54px;
-    border: 1px solid $orange-dark;
-    background-color: transparent;
-    color: $grey;
-    outline: none;
-    &:focus {
-      color: $white;
-      border: 1px solid $orange;
-    }
-  }
-  // .search__button
-  &__button {
-    position: absolute;
-    top: 8px;
-    left: 16px;
-  }
-}
-
-// .search-button
-.search-button {
-  width: 28px;
-  height: 28px;
-  background-image: url(../img/icons/search.svg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  opacity: 0.7;
-  &:hover,
-  &:focus {
-    opacity: 1;
-  }
-}
-
 //*page-nav
 .page-nav {
   // display: flex;
@@ -529,7 +349,9 @@
   transition: transform 0.2s linear, opacity 0.3s linear;
   // visibility: hidden;
   opacity: 0;
+  background-color: $white;
   // overflow-y: auto;
+  //todo мб перенести к элементу
   &.open {
     transform: rotate(0deg);
     // visibility: visible;
