--- a/#src/scss/blocks/product-card.scss
+++ b/#src/scss/blocks/product-card.scss
@@ -1,8 +1,8 @@
 .product-card {
-  margin-left: auto;
-  margin-right: auto;
+  // margin-left: auto;
+  // margin-right: auto;
   position: relative;
-  max-width: 289px;
+  // max-width: 289px;
   // height: 384px;
   padding-top: 15px;
   padding-bottom: 30px;
@@ -68,6 +68,7 @@
   }
   // .product-card__button
   &__button {
+    width: 100%;
     & + .counter-card {
       display: none;
     }
@@ -105,7 +106,6 @@
     }
   }
 }
-
 .counter-card {
   display: flex;
   align-items: center;
@@ -155,7 +155,6 @@
     color: $grey-light;
   }
 }
-
 .gallery-card {
   // .gallery-card__slider
   &__slider {
@@ -189,36 +188,40 @@
     }
   }
 }
-
 .tip {
   position: absolute;
   display: flex;
   justify-content: center;
   align-items: center;
   height: 28px;
-  width: 83px;
+  max-width: 55%;
+  overflow: hidden;
+  padding: 5px 20px 5px 10px;
   background-color: $white;
+  user-select: none;
   &--new {
     color: $orange;
     border: 1px solid $orange;
   }
   &--hit {
     color: #755fbb;
-    border: 1px solid $orange;
+    border: 1px solid #755fbb;
   }
   &--action {
     color: #5fbba3;
-    border: 1px solid $orange;
+    border: 1px solid #5fbba3;
   }
   &--out {
     color: #636b78;
-    border: 1px solid $orange;
+    border: 1px solid #636b78;
   }
   &--sale {
     color: #c82a2a;
-    border: 1px solid $orange;
+    border: 1px solid #c82a2a;
   }
   &__text {
+    font-size: 15px;
+    line-height: 1.3;
   }
   // &::before,
   // &::after {
